@startuml

title __LISTENER's Class Diagram__\n

  namespace tech.eportfolio.server {
    namespace listener {
      class tech.eportfolio.server.listener.AddDefaultMusicListener {
          {static} + defaultMusicURL : String
          - logger : Logger
          - mongoTemplate : MongoTemplate
          + onApplicationEvent()
      }
    }
  }
  

  namespace tech.eportfolio.server {
    namespace listener {
      class tech.eportfolio.server.listener.CreateQueueOnStartupListener {
          - logger : Logger
          + onApplicationEvent()
          + setUserFollowRepository()
          + setUserFollowService()
          + setUserService()
      }
    }
  }
  

  tech.eportfolio.server.listener.AddDefaultMusicListener o-- tech.eportfolio.server.service.PortfolioService : portfolioService
  tech.eportfolio.server.listener.CreateQueueOnStartupListener o-- tech.eportfolio.server.repository.UserFollowRepository : userFollowRepository
  tech.eportfolio.server.listener.CreateQueueOnStartupListener o-- tech.eportfolio.server.service.UserFollowService : userFollowService
  tech.eportfolio.server.listener.CreateQueueOnStartupListener o-- tech.eportfolio.server.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
